force-app/main/default/objects/Agence__c/Agence__c.object-meta.xml
<CustomObject>
    <description>Agences Babcock-Wanson</description>
    <label>Agence</label>
    <nameField>
        <label>Nom de Agence</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>