force-app/main/default/objects/Agence__c/fields/Adresse_Ligne_2__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Ligne_2__c</fullName>
    <label>Adresse Ligne 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>