force-app/main/default/objects/Agence__c/fields/AGE_Adresse_Ligne_1__c.field-meta.xml
<CustomField>
    <fullName>AGE_Adresse_Ligne_1__c</fullName>
    <label>Adresse Ligne 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>