force-app/main/default/objects/Agence__c/fields/AGE_Adresse_Ligne_3__c.field-meta.xml
<CustomField>
    <fullName>AGE_Adresse_Ligne_3__c</fullName>
    <label>Adresse Ligne 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>