force-app/main/default/objects/Agence__c/fields/AGE_Code_Agence__c.field-meta.xml
<CustomField>
    <fullName>AGE_Code_Agence__c</fullName>
    <label>Code Agence</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>