force-app/main/default/objects/Agence__c/fields/AGE_Code_API_Agence__c.field-meta.xml
<CustomField>
    <fullName>AGE_Code_API_Agence__c</fullName>
    <label>Code API Agence</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>