force-app/main/default/objects/Agence__c/fields/AGE_Code_Postal__c.field-meta.xml
<CustomField>
    <fullName>AGE_Code_Postal__c</fullName>
    <label>Code Postal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>