force-app/main/default/objects/Agence__c/fields/AGE_Mail__c.field-meta.xml
<CustomField>
    <fullName>AGE_Mail__c</fullName>
    <label>Mail</label>
    <type>Email</type>
</CustomField>