force-app/main/default/objects/Agence__c/fields/AGE_Responsable_Agence__c.field-meta.xml
<CustomField>
    <fullName>AGE_Responsable_Agence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Agence</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agences</relationshipName>
    <type>Lookup</type>
</CustomField>