force-app/main/default/objects/Agence__c/fields/AGE_Telephone__c.field-meta.xml
<CustomField>
    <fullName>AGE_Telephone__c</fullName>
    <label>Téléphone</label>
    <type>Phone</type>
</CustomField>