force-app/main/default/objects/Agence__c/fields/AGE_Ville__c.field-meta.xml
<CustomField>
    <fullName>AGE_Ville__c</fullName>
    <label>Ville</label>
    <length>50</length>
    <type>Text</type>
</CustomField>