force-app/main/default/objects/Agence__c/fields/EntiteBW__c.field-meta.xml
<CustomField>
    <fullName>EntiteBW__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>EntiteBW</label>
    <referenceTo>VIEntiteBW__c</referenceTo>
    <relationshipLabel>Agences</relationshipLabel>
    <relationshipName>Agences</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>