force-app/main/default/objects/Agence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>EntiteBW__c</columns>
    <columns>NAME</columns>
    <columns>AGE_Code_Agence__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>